--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,8 @@ jobs:
        with:
          distribution: temurin
          java-version: "11"
+     - name: create dir
+       run: mkdir -p app/build/outputs/apk/debug/
      - name: Set execution flag for gradlew
        run: chmod +x gradlew
      - name: Build APK
@@ -40,7 +42,7 @@ jobs:
          name: apk
      - name: Create Release
        id: create_release
-       uses: actions/create-release@v2
+       uses: actions/create-release@v1
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
