--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,6 +55,6 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
          upload_url: ${{ steps.create_release.outputs.upload_url }}
-         asset_path: apk/app-debug.apk
+         asset_path: apk/fsclock.apk
          asset_name: ${{ github.event.repository.name }}.apk
          asset_content_type: application/zip
